# 2025-python-toronto-new-in-python

./: README.md  exception_chaining.py  exception_grouping.py  exception_messages.py  f_strings.py  pattern_matching.py  pyproject.toml  static_attributes.py
