[project]
name = "new-in-python"
version = "0.1.0"
description = "Demonstration of new features in Python 3.13"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astpretty>=3.0.0",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "astpretty>=3.0.0",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.31.0",
    "pyright>=1.1.392.post0",
    "ruff>=0.9.3",
]

[tool.black]
line-length = 88
target-version = ['py313']
